Fix alignment on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -219,7 +219,6 @@ body {
     width: auto;
   }
   .piczag-logo {
-    margin: -31px auto 2em;
     width: 95%;
   }
   .first-slide {
